--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,10 @@
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
+
 jobs:
   build: 
-    docker:
+    docker: 
       - image: circleci/node:12.18
     steps:
       - checkout
@@ -11,8 +12,12 @@ jobs:
       - run: cd api && npm ci
       - run: cd api && npm test
 
+
+      - setup_remote_docker
+      
       - run: |
           cd api
-          docker build -t climatelocator_api . 
-          docker tag storyline_api:latest eliseboes/climatelocator_api:0.1.0
-          docker push eliseboes/climatelocator_api:0.1.0
+          TAG="0.1.${​​​​CIRCLE_BUILD_NUM}​​​​"
+          docker build -t eliseboes/climatelocator_api:$TAG .
+          docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+          docker push eliseboes/climatelocator_api:$TAG
