--- a/api/package.json
+++ b/api/package.json
@@ -19,5 +19,11 @@
     "pg": "^8.5.0",
     "supertest": "^6.0.1",
     "uuid": "^8.3.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/src/__tests__/integration/",
+      "/node_modules/"
+    ]
   }
 }
