--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,13 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+# Use a package of configuration called an orb.
 orbs:
-  node: circleci/node@3.0.0
-
-jobs:
-  build: 
-    docker: 
-      - image: circleci/node:12.18
-    steps:
-      - checkout
-
-      - run: cd api && npm ci
-      - run: cd api && npm test
-
-
-      - setup_remote_docker
-      
-      - run: |
-          cd api
-          TAG="0.1.${​​​​CIRCLE_BUILD_NUM}​​​​"
-          docker build -t eliseboes/climatelocator_api:$TAG .
-          docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-          docker push eliseboes/climatelocator_api:$TAG
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
