--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js",
-    "test": "ng jest --watchAll --verbose --detectOpenHandles --coverage"
+    "test": "jest --watchAll --verbose --detectOpenHandles --coverage"
   },
   "author": "",
   "license": "ISC",
