--- a/api/package.json
+++ b/api/package.json
@@ -22,8 +22,7 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/src/__tests__/integration/"
+      "/node_modules/"
     ]
   }
 }
