--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "/node_modules/"
+      "/node_modules/",
+      "/__tests__/integration/"
     ]
   }
 }
