refactor(server): check if location exsists before inserting in DB
refactor(package): remove integration tests from testPathIgnorePatterns to test endpoints

--- a/api/package.json
+++ b/api/package.json
@@ -22,8 +22,7 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/__tests__/integration/"
+      "/node_modules/"
     ]
   }
 }
